apps/services/backend/rustfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs
spec:
  clusterIP: None
  selector:
    app: rustfs
  ports:
    - name: s3-api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
